--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
 <head>
     <meta charset="utf-8" />
     <title>ポートフォリオです。</title>
+    <link href="./css/index.css" rel="stylesheet"  type="text/css" />
+    <!--<link href="./css/common.css" rel="stylesheet"  type="text/css" />-->
 </head>
 <body>
-    <h1>てすと。</h1>
+    <div class="header">
+        <!-- ヘッダーの画像 -->
+        <!--<img class="header_photo" src="./photo/mountain.jpg" />-->
+        <div class="header_area"></div>
+        <div class="btn_area">
+
+            <div class="btn_top btn" id="btn_top_id"><p>Top</p></div>
+            <div class="btn_prof btn"><p>Profile</p></div>
+            <div class="btn_works btn"><p>Works</p></div>
+            <div class="btn_twitter btn"><p>Twitter</p></div>
+            <div class="btn_github btn"><p>Github</p></div>
+
+
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="menu">
+            <p id="text">aaa</p>
+        </div>
+    </div>
+    <div class="footer">
+
+
+    </div>
+
+
+    <script type="text/javascript" src="./js/index.js" charset " charset="shift_jis"";></script>
 </body>
 </html>
