ロゴを追加

--- a/index.html
+++ b/index.html
@@ -4,37 +4,51 @@
 <head>
     <meta charset="utf-8" />
     <title>ポートフォリオです。</title>
-    <link href="./css/index.css" rel="stylesheet"  type="text/css" />
-    <!--<link href="./css/common.css" rel="stylesheet"  type="text/css" />-->
+    <link href="./css/index.css" rel="stylesheet" type="text/css" />
+    <link href="./css/slick-theme.css" rel="stylesheet" type="text/css" />
+    <link href="./css/slick.css" rel="stylesheet" type="text/css" />
+    <link href="./css/common.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="header">
-        <!-- ヘッダーの画像 -->
+        <div class="logo_area"></div>
         <!--<img class="header_photo" src="./photo/mountain.jpg" />-->
-        <div class="header_area"></div>
         <div class="btn_area">
 
-            <div class="btn_top btn" id="btn_top_id"><p>Top</p></div>
-            <div class="btn_prof btn"><p>Profile</p></div>
+            <div class="btn_top btn"><p>Top</p></div>
+            <div class="btn_prof btn"><p>profile</p></div>
             <div class="btn_works btn"><p>Works</p></div>
             <div class="btn_twitter btn"><p>Twitter</p></div>
-            <div class="btn_github btn"><p>Github</p></div>
+            <div class="btn_facebook btn"><p>Facebook</p></div>
 
 
         </div>
+        <!-- ヘッダーの画像 -->
+        <!--<div class="slider_area">
+            <ul class="slider">
+                <li><img src="./images/road.jpg" alt="道" /></li>
+                <li><img src="./images/mountain.jpg" alt="山" /></li>
+            </ul>
+        </div>-->
     </div>
 
     <div class="main">
         <div class="menu">
-            <p id="text">aaa</p>
+
+
+
         </div>
     </div>
     <div class="footer">
 
-
+        <p class="copyright">&copy;オーウェル 2020 Japan</p>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 
-    <script type="text/javascript" src="./js/index.js" charset " charset="shift_jis"";></script>
+    <script type="text/javascript" src="./js/slick.min.js"></script>
+    <script type="text/javascript" src="./js/index.js" charset="shift_jis" ;></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+
 </body>
 </html>
