フッターとヘッダーを別ファイル化

--- a/index.html
+++ b/index.html
@@ -11,25 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo_area"></div>
-        <!--<img class="header_photo" src="./photo/mountain.jpg" />-->
-        <div class="btn_area">
 
-            <div class="btn_top btn"><p>Top</p></div>
-            <div class="btn_prof btn"><p>profile</p></div>
-            <div class="btn_works btn"><p>Works</p></div>
-            <div class="btn_twitter btn"><p>Twitter</p></div>
-            <div class="btn_facebook btn"><p>Facebook</p></div>
-
-
-        </div>
-        <!-- ヘッダーの画像 -->
-        <!--<div class="slider_area">
-            <ul class="slider">
-                <li><img src="./images/road.jpg" alt="道" /></li>
-                <li><img src="./images/mountain.jpg" alt="山" /></li>
-            </ul>
-        </div>-->
     </div>
 
     <div class="main">
@@ -41,14 +23,13 @@
     </div>
     <div class="footer">
 
-        <p class="copyright">&copy;オーウェル 2020 Japan</p>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
-
+    <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/slick.min.js"></script>
     <script type="text/javascript" src="./js/index.js" charset="shift_jis" ;></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 
 </body>
 </html>
