--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="./css/common.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="header">
+    <div id="header">
 
     </div>
 
@@ -21,7 +21,7 @@
 
         </div>
     </div>
-    <div class="footer">
+    <div id="footer">
 
 
     </div>
