--- a/header.html
+++ b/header.html
@@ -2,9 +2,10 @@
 <!--<img class="header_photo" src="./photo/mountain.jpg" />-->
 <div class="btn_area">
 
-    <div class="btn_top btn"><p>Top</p></div>
-    <div class="btn_about btn"><p>About</p></div>
-    <div class="btn_works btn"><p>Works</p></div>
+    <div class="btn_top btn"><a><a href="index.html">Top</a></div>
+    <div class="btn_about btn"><p><a href="about.html">About</a></p></div>
+    <a href="works.html"><div class="btn_works btn"><p>Works</p></div></a>
+    <div class="weblog btn"><p>Blog</p></div>
     <div class="btn_twitter btn"><p>Twitter</p></div>
     <div class="btn_facebook btn"><p>Facebook</p></div>
 
