--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <link href="./css/common.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <div id="footer"></div>
     <div class="calender">
 
      
@@ -17,7 +18,7 @@
 
 
     </div>
-
+    <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="./js/common.js" charset="shift_jis"></script>
     <script type="text/javascript" src="./js/slick.min.js"></script>
