--- a/header.html
+++ b/header.html
@@ -8,15 +8,17 @@
         <a href="about.html">
             <div class="btn_about btn"><p>About</p>
 </div>
+            </a>
   <a href="works.html">
             <div class="btn_about btn"><p>Works</p>
+      </a>
 </div>
   <a href="blog.html">
             <div class="btn_about btn"><p>Blog</p>
-</div>
+</div></a>
   <a href="#">
             <div class="btn_about btn"><p>Twitter</p>
-</div>  
+</div>  </a>
 
 </div>
 <!-- ƒwƒbƒ_[‚Ì‰æ‘œ -->
