--- a/header.html
+++ b/header.html
@@ -5,20 +5,28 @@
     <a href="index.html">
         <div class="btn_top btn"><p>Top</p></div>
     </a>
-        <a href="about.html">
-            <div class="btn_about btn"><p>About</p>
-</div>
-            </a>
-  <a href="works.html">
-            <div class="btn_about btn"><p>Works</p>
-      </a>
-</div>
-  <a href="blog.html">
-            <div class="btn_about btn"><p>Blog</p>
-</div></a>
-  <a href="#">
-            <div class="btn_about btn"><p>Twitter</p>
-</div>  </a>
+    <a href="about.html">
+        <div class="btn_about btn">
+            <p>About</p>
+        </div>
+    </a>
+    <a href="works.html">
+        <div class="btn_about btn">
+            <p>Works</p>
+
+        </div>
+    </a>
+
+    <a href="blog.html">
+        <div class="btn_about btn">
+            <p>Blog</p>
+        </div>
+    </a>
+    <a href="#">
+        <div class="btn_about btn">
+            <p>Twitter</p>
+        </div>
+    </a>
 
 </div>
 <!-- ƒwƒbƒ_[‚Ì‰æ‘œ -->
