ブログ院デックう

--- a/blog.html
+++ b/blog.html
@@ -1,22 +1,18 @@
 <html>
 <head>
 
-   
+
     <link href="./css/blog.css" rel="stylesheet" type="text/css" />
     <link href="./css/slick-theme.css" rel="stylesheet" type="text/css" />
     <link href="./css/slick.css" rel="stylesheet" type="text/css" />
     <link href="./css/common.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div id="footer"></div>
-    <div class="calender">
-
-     
-
-    </div>
-    <div class="blog_menu">
-
-
+    <div id="header"></div>
+    <div class="main">
+        <div class="blog_cotents"></div>
+        <div class="blog_menu">
+        </div>
     </div>
     <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
