--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/common.js" charset="shift_jis"></script>
+    <script type="text/javascript" src="./js/common.js" charset="utf-8"></script>
     <script type="text/javascript" src="./js/slick.min.js"></script>
-    <script type="text/javascript" src="./js/index.js" charset="shift_jis" ;></script>
+    <script type="text/javascript" src="./js/index.js" charset="utf-8" ;></script>
 
 </body>
 </html>
