--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,8 @@
-<p>無断転載を禁じます。</p>
 
-<p class="copyright">&copy;オーウェル 2020 Japan</p>
+<div class="copyright_message">
+    <p>無断転載を禁じます。</p>
+</div>
+<div class="copyright">
+<p>&copy;オーウェル 2020 Japan</p>
+    </div>
 
