--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="main">
-            <p>Works</p>
+            <h1>Works</h1>
 
 
     </div>
@@ -23,7 +23,7 @@
 
 
     </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="./js/common.js" charset="utf-8"></script>
     <script type="text/javascript" src="./js/slick.min.js"></script>
