--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,12 @@
     <div class="main">
         <div class="blog_cotents"></div>
         <div class="blog_menu">
+            <div class="calender">
+
+            </div>
+            <div class="post_list">
+
+            </div>
         </div>
     </div>
     <div id="footer"></div>
