--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="shift-jis" />
     <title>ポートフォリオです。</title>
     <link href="./css/index.css" rel="stylesheet" type="text/css" />
     <link href="./css/slick-theme.css" rel="stylesheet" type="text/css" />
